// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDataListWithValues util getDataListWithValues TABLE_DATA_LIST getDataListWithValues with TABLE_DATA_LIST toMatchSnapshot 1`] = `
Array [
  Object {
    "bold": true,
    "title": "Pair",
    "value": "BNBBTC",
  },
  Object {
    "title": "Latest Price",
    "value": "0.00184990",
  },
  Object {
    "title": "Open",
    "value": "0.00187580",
  },
  Object {
    "title": "High",
    "value": "0.00182500",
  },
  Object {
    "title": "Low",
    "value": "2332.46079005",
  },
  Object {
    "title": "Volume",
    "value": "0.00184780",
  },
]
`;

exports[`getDataListWithValues util getDataListWithValues initial state returns properly 1`] = `
Array [
  Object {
    "title": "Pair",
  },
  Object {
    "title": "Latest Price",
  },
  Object {
    "title": "Open",
  },
  Object {
    "title": "High",
  },
  Object {
    "title": "Low",
  },
  Object {
    "title": "Volume",
  },
]
`;

exports[`getDataListWithValues util getDataListWithValues other list getDataListWithValues with other list toMatchSnapshot 1`] = `
Array [
  Object {
    "title": "Baase asset",
  },
  Object {
    "title": "Quote asset",
  },
  Object {
    "title": "Parent market",
  },
  Object {
    "title": "Category of the parent market",
  },
]
`;
